made changes to the text and added a lot more info about self lol

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header id="main-header">
             <div class="container">
-                <h1 id="firstTitle">kuancept</h1>
+                <h1 id="firstTitle">Victor Kuan's webdev portfolio</h1>
                 <!-- <h2 id="secondTitle">the blog</h2> -->
             </div>
         </header>
@@ -16,8 +16,9 @@
             <div class="container">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Rants</a></li>
+                    <!-- <li><a href="#">About</a></li> -->
+                    <li><a href="#">Udubbed</a></li>
+                    <li><a href="#">MemesReactProject</a></li>
                     <li><a href="https://www.youtube.com/channel/UCRY6lgA6294Xv3vHjK6WhMg?view_as=subscriber">YouTube</a></li>
                 </ul>
             </div>
@@ -31,14 +32,54 @@
         <div class="container">
             <section id="main">
                 <h1>Hello and welcome! I'm Victor Kuan.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aperiam culpa tenetur saepe ut ad quos, amet delectus minima velit dicta distinctio ipsam necessitatibus enim quisquam illo dolorum, sint quam.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aperiam culpa tenetur saepe ut ad quos, amet delectus minima velit dicta distinctio ipsam necessitatibus enim quisquam illo dolorum, sint quam.
+                <p>Hey there! I'm Victor Kuan, and I'm a second year CSE student here at the UW. It's truly a dream come true that I get to study alongside some brilliant people here at this institution.  
                 </p>
+                <h3>
+                    Java skills
+                </h3>
+                <p>
+                    Being a CSE student, I've familiarized myself with some pretty interesting technologies this past year. Namely, I'm quite familiar with Java, its syntax, how to implement many of its important
+                    datastructures (including AVLTree, Min/Max-Heaps, Tries, and more), and how to implement some clever sorts (including Quicksort, Mergesort, and Heapsort).
+                </p>
+                <h3>
+                    Webdev experience
+                </h3>
+                <p>
+                    Beyond Java, I've also familiarized myself 
+                    with some webdev technologies and languages this past summer. I taught myself html, css, and some JavaScript (React.js, to be more specific). My favorite framework to work with is probably Bootstrap. 
+                    It's so clean and simplistic, and the syntax is easy to learn about. To showcase my summer webdev learnings, I've created a few projects (including this portfolio blog page) and I'd like to share the 
+                    projects with whoever is viewing this site.
+                </p>
+                <h3>
+                    Udubbed <a href="https://docs.google.com/document/d/1g8TtnwVUe5ObbMo0p2GaZnAgU6qYS3kRPuf6ZjYkjX8/edit#">-> visit it here</a>
+                </h3>
+                <p>
+                    Udubbed is a tips and tricks blog page that I've been working on, and it's supposed to a project where I compile some information (based on my own experience + things I've heard from friends + information I've read
+                    on reddit) about how to succeed/live in happier, more efficient way at the UW. I'm still working on it, so a lot of the information hasn't been posted yet. Stay tuned. 
+                </p>
+                <p>
+                    For this project I used html and css, and to more efficiently style my page, I went with a Boostrap approach to deal with my css. I haven't finished the page yet (there's more information to be added), but it
+                    still effectively showcases my competence with writing stuff in html, and then properly styling the site using css and frameworks. 
+                </p>
+                <h3>
+                    What do I look like? 
+                </h3>
+                <p>
+                    Pic of Vic provided below :0
+                </p>
+                <img src="images/vic.jpg">
             </section>
 
             <aside id="sidebar">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, aperiam? Voluptatibus, omnis! Magnam quo iure iste quasi expedita quia ex, eius molestias assumenda, laboriosam, aliquam voluptatibus quis quam sequi sapiente.
+                <h2>
+                    Who am I?
+                </h2>
+                <p> I'm a human being and so I have some interests beyond just writing code on computers lol. I'm a tennis player, a YouTube content creator, and a food enthusiast 
+                    (who loves Beef Noodle Soup, Sushi, Ramen, Dumplings, Pho, Mapo Tofu, Boba, and much more).
                 </p>
+               
+                
+
             </aside>
         </div>
         <div>
