added udubbed link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <!-- <li><a href="#">About</a></li> -->
-                    <li><a href="#">Udubbed</a></li>
+                    <li><a href="udubbed/index.html" target="_blank">Udubbed</a></li>
                     <li><a href="#">MemesReactProject</a></li>
                     <li><a href="https://www.youtube.com/channel/UCRY6lgA6294Xv3vHjK6WhMg?view_as=subscriber">YouTube</a></li>
                 </ul>
@@ -51,7 +51,7 @@
                     projects with whoever is viewing this site.
                 </p>
                 <h3>
-                    Udubbed <a href="https://docs.google.com/document/d/1g8TtnwVUe5ObbMo0p2GaZnAgU6qYS3kRPuf6ZjYkjX8/edit#">-> visit it here</a>
+                    Udubbed <a href="udubbed/index.html" target="_blank">-> visit it here</a>
                 </h3>
                 <p>
                     Udubbed is a tips and tricks blog page that I've been working on, and it's supposed to a project where I compile some information (based on my own experience + things I've heard from friends + information I've read
